# weathr

./: .#README.md  Cargo.toml  README.md
src/: .#display.rs  backend.rs  config.rs  display.rs  lib.rs  main.rs  mock_json.rs  request.rs
