[package]
name = "weathr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
colour = "0.6.0"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tabular = "0.2.0"
thiserror = "1.0.31"
ureq = "2.4.0"
url = "2.2.2"
